# personal_diary

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
entries/: admin.py  forms.py  models.py  views.py
entries/migrations/: 0001_initial.py  0002_alter_entry_content.py
static/css/: style.css
templates/base/: base.html
templates/entries/: entry_confirm_delete.html  entry_detail.html  entry_form.html  entry_list.html
templates/users/: login.html  logout_confirm.html  register.html
users/: urls.py  views.py
