[tool.poetry]
name = "personal-diary"
version = "0.1.0"
description = ""
authors = ["timyr98239718@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0.5"
python-dotenv = "^1.2.2"
psycopg2-binary = "^2.9.12"
psycopg = "^3.3.4"
psycopg-binary = "^3.3.4"
gunicorn = "^26.0.0"
pillow = "^12.2.0"
django-ckeditor-5 = "^0.2.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
